feat: add new elements to tree

--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,14 @@
     display: flex;
 }
 
-
-.mainImg{
-    height: 100vh;
-    width: 55vh;
-    margin: 0;
-}
 .leftContainer{
-
+    background-image: url("images/mainimg2.jpg");
+    background-repeat: no-repeat; 
+    background-size: cover; 
+    background-position: center;
+    height: 100vh;
+    width: 40vw;
+    margin: 0;
 }
 
 .rightContainer{
