--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,15 @@
+*{
+    margin: 0;
+}
+
+@font-face {
+    font-family: 'odin-font';
+    src: url('fonts/Norse-Bold.otf') format('opentype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 .mainContainer{
     display: flex;
 }
@@ -9,9 +21,32 @@
     background-position: center;
     height: 100vh;
     width: 40vw;
-    margin: 0;
 }
 
-.rightContainer{
+.banner{
+    display: flex;
+    margin-top: 20vh;
+    width: 40vw;
+    height: 15vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+}
+.preFormText{
 
+}
+
+.logoText{
+    font-family: 'odin-font', sans-serif;
+    font-size: 5em;
+    color: white;
+}
+.logo{
+    height: 13vh;
+}
+.rightContainer{
+    display: flex;
+    width: 60vw;
+    background-color: aliceblue;
+    flex-direction: column;
 }
