--- a/styles.css
+++ b/styles.css
@@ -106,5 +106,24 @@ label{
     color: rgb(54, 54, 54);
 }
 .submitButton{
-    
+    margin: 3em;
+    height: 5vh;
+    width: 20vw;
+    border: 1px solid rgb(99, 99, 99);
+    border-radius: 7px;
+    background-color: #596D48;
+    color: white;
+    font-weight: 800;
+    font-size: 1em;
+}
+.loginContainer{
+    display: flex;
+    gap: 0.5em;
+    margin-left: 2.5em;
+    font-size: 1.1em;
+}
+a{
+    color: #596D48;
+    text-decoration: none;
+    font-weight: 800;
 }
