--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,11 @@ a{
     text-decoration: none;
     font-weight: 800;
 }
+
+input {
+    border: 1px solid #dddee0;
+}
+
+input:valid {
+    border-color: green;
+}
